@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-06-16T01:00:43Z",
-  "count_outdated" : 255,
-  "uniques_outdated" : 189,
+  "timestamp" : "2025-06-21T00:57:34Z",
+  "count_outdated" : 257,
+  "uniques_outdated" : 190,
   "count" : 258,
   "uniques" : 191,
   "clones" : [
-    {
-      "timestamp": "2025-06-06T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
-      "count_decinc": [ 0, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-06-15T00:00:00Z",
       "count": 1,
