@@ -1,3 +1,12 @@
+2025-06-21T00:57:34Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/15790384319 # 681
+* notice: Stats Output Repository: https://github.com/andry81-stats/andry81-devops--gh-stats/commits?branch=master&time_zone=utc&until=2025-06-21
+* notice: last 14d: unq all: 1 1
+* notice: prev accum: outdated-unq outdated-all / unq all: 189 255 / 191 258
+* notice: next accum: outdated-unq outdated-all / unq all: 190 257 / 191 258
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2025-06-06] / []
+
 2025-06-16T01:00:43Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/15669408016 # 676
 * notice: Stats Output Repository: https://github.com/andry81-stats/andry81-devops--gh-stats/commits?branch=master&time_zone=utc&until=2025-06-16
